examples/kubeflow/apps/kfdefs/ingress.yaml
"apiVersion": "networking.k8s.io/v1beta1"
"kind": "Ingress"
"metadata":
  "annotations":
    "alb.ingress.kubernetes.io/auth-idp-cognito": "{\"UserPoolArn\":\"arn:aws:cognito-idp:eu-west-3:245582572290:userpool/eu-west-3_u9kwIvNdN\",\"UserPoolClientId\":\"34ev2ggrkfg38880uh3g9mmhho\",\"UserPoolDomain\":\"auth.kubeflow.edu.provectus.io\"}"
    "alb.ingress.kubernetes.io/auth-type": "cognito"
    "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:eu-west-3:245582572290:certificate/40533794-3f66-4560-b0e9-d9339cddec06"
    "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTPS\":443}]"
    "alb.ingress.kubernetes.io/scheme": "internet-facing"
    "kubernetes.io/ingress.class": "alb"
  "labels":
    "app": "kubeflow"
  "name": "istio-ingress"
  "namespace": "istio-system"
"spec":
  "rules":
  - "host": "kubeflow.kubeflow.edu.provectus.io"
    "http":
      "paths":
      - "backend":
          "serviceName": "istio-ingressgateway"
          "servicePort": 80
        "path": "/*"
  "tls":
  - "hosts":
    - "kubeflow.kubeflow.edu.provectus.io"
    "secretName": "kubeflow-tls-certs"
